<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg_letras">

    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <Button android:text="@string/escribir_mem"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:id="@+id/BtnEscribirFichero"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <Button android:text="@string/leer_mem"
            android:id="@+id/BtnLeerFichero"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <Button android:text="@string/leer_raw"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:id="@+id/BtnLeerRaw"
            android:layout_weight="1"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>