<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.erika_000.devmanager.Gestion5BActivity"
        android:background="@drawable/bg_dpgris">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="0dp"
            android:background="@drawable/linearlayout_bg"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Título:"
                    android:id="@+id/textView8"
                    android:textColor="#fff9fbff"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtxt_tit"
                    android:textColor="#fff9fbff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Descripción"
                    android:id="@+id/text_descr"
                    android:textColor="#fff9fbff"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtxt_desc"
                    android:textColor="#fff9fbff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Link:"
                    android:id="@+id/text_link"
                    android:textColor="#fff9fbff"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtxt_link"
                    android:textColor="#fff9fbff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp">

                <Button
                    android:id="@+id/btn_insertar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_crear"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_add"
                    android:padding="10dp"
                    android:text="@string/insertar"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:background="#ff6cc4ef"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_editar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:drawableLeft="@drawable/ic_edit"
                    android:padding="10dp"
                    android:text="@string/editar"
                    android:gravity="center"
                    android:background="#ff6cc4ef"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_eliminar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/btn_insertar"
                    android:layout_alignRight="@+id/btn_insertar"
                    android:layout_below="@+id/btn_insertar"
                    android:drawableLeft="@drawable/ic_borrar"
                    android:padding="10dp"
                    android:text="@string/borrar"
                    android:gravity="center"
                    android:background="#ff6cc4ef"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp" />

                <Button
                    android:id="@+id/btn_buscar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/btn_insertar"
                    android:layout_alignStart="@+id/btn_insertar"
                    android:layout_below="@+id/btn_eliminar"
                    android:drawableLeft="@drawable/ic_buscar"
                    android:padding="10dp"
                    android:text="@string/buscar"
                    android:gravity="center"
                    android:background="#ff6cc4ef"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_salir"
                android:padding="10dp"
                android:text="@string/salir"
                android:gravity="center"
                android:background="#ff6cc4ef"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="150dp" />

        </LinearLayout>

    </ScrollView>
